--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "8003:80" # Change this line
     volumes:
-      - ./lara_api:/var/www/html
+      - ./lara_api:/var/www/
     depends_on:
       - mysql
     networks:
@@ -30,6 +30,8 @@ services:
       context: ./vue-app
       dockerfile: Dockerfile
     ports:
-      - "8082:8080"
+      - "8082:8081"
+    volumes:
+      - ./vue-app:/app
     networks:
       - laravel-network
